[tool.poetry]
name = "biophysics"
version = "0.1.0"
description = "A repository of tables, data, utility functions for biophysics thought experiments"
authors = ["Elijah Christensen <ejd.christensen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
